--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,16 +15,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Basic Template</title>
-    <meta name="description" content="{{meta.data.description}}" />
+    <meta name="description" content="All the curated creative coding experiments and examples made by me}" />
 
-    <meta property="og:title" content="{{meta.data.title}}" />
-    <meta property="og:image" content="{{meta.data.image.url}}" />
-    <meta property="og:description" content="{{meta.data.description}}" />
+    <meta property="og:title" content="whizzbbig - Creative Coding" />
+    <meta property="og:image" content="https://i.ibb.co/k8pRpFP/Screenshot-2022-12-01-at-8-37-46-PM.png" />
+    <meta property="og:description" content="All the curated creative coding experiments and examples made by me}" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="{{meta.data.title}}" />
-    <meta name="twitter:description" content="{{meta.data.description}}" />
-    <meta name="twitter:image:src" content="{{meta.data.image.url}}" />
+    <meta name="twitter:title" content="whizzbbig - Creative Coding" />
+    <meta name="twitter:description" content="All the curated creative coding experiments and examples made by me}" />
+    <meta name="twitter:image:src" content="https://i.ibb.co/k8pRpFP/Screenshot-2022-12-01-at-8-37-46-PM.png" />
 </head>
 
 <body>
