Trying to add the canvas in the specified classes

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,6 +40,11 @@
 
         <div class="home">
             <div class="home__wrapper">
+                <canvas width="1080" height="1080" data-canvas class="sketch-01"></canvas>
+                <canvas width="1080" height="1080" data-canvas class="sketch-02"></canvas>
+                <canvas width="1080" height="1080" data-canvas class="sketch-03"></canvas>
+                <canvas width="1080" height="1080" data-canvas class="sketch-04"></canvas>
+                <canvas width="1080" height="1080" data-canvas class="sketch-05"></canvas>
             </div>
         </div>
     </div>
