--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -44,7 +44,7 @@
                 <canvas width="1080" height="1080" data-canvas class="sketch-02"></canvas>
                 <canvas width="1080" height="1080" data-canvas class="sketch-03"></canvas>
                 <canvas width="1080" height="1080" data-canvas class="sketch-04"></canvas>
-                <canvas width="1080" height="1080" data-canvas class="sketch-05"></canvas>
+                <!-- <canvas width="1080" height="1080" data-canvas class="sketch-05"></canvas> -->
             </div>
         </div>
     </div>
